kubernetes/apps/ai/ollama/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  selector:
    app: ollama
  ports:
    - name: http
      port: 11434
      targetPort: http
      protocol: TCP
